// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CSidebarHeader customize 1`] = `
<div>
  <div
    class="sidebar-header bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CSidebarHeader component 1`] = `
<div>
  <div
    class="sidebar-header"
  >
    Test
  </div>
</div>
`;
